# basalt

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.windows  README.md  TODO.md  debug.Dockerfile  docker-compose.yaml  make_debug.sh  make_release.sh
docker/debug/: Dockerfile
docker/linux-legacy/: Dockerfile
include/: utility.h
src/: benchmark.c  main.c  utility.c
tests/: test.c
